--- a/phaser/.gitignore
+++ b/phaser/.gitignore
@@ -1,16 +1,5 @@
-  
-# System and IDE files
-Thumbs.db
+/node_modules
+/dist
+/.cache
+/.vscode
 .DS_Store
-.idea
-*.suo
-*.sublime-project
-*.sublime-workspace
-
-# Vendors
-node_modules/
-
-# Build
-dist/
-/npm-debug.log
-© 2020 GitHub, Inc.
